@@ -5,6 +5,9 @@ Changes in version 0.5-3 (2015-03-??)
    * Added new greport option nontx.col and use that in other functions, for non-treatment groups
    * dReport: changed strip label font size
    * dReport: run ggplot.summaryP output through colorFacet (new in Hmisc)
+   * upFirst: leave all words with > 1 upper case letter unchanged (for acronyms)
+   * accrualReport: changed denominator to randomized subjects for table corresponding to box plots of days to randomization
+   * all reporting functions: use upFirst(lower=TRUE) for captions
 
 Changes in version 0.5-2 (2014-11-21)
    * accrualReport: axis.Date was not positioning axis labels containing only 4-digit years at Jan 1 so wrote customized axisDate function
